yaml_files/todo-yaml/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-worker
  labels:
    app: todo-worker
spec:
  replicas: 1  # Only need one worker for now
  selector:
    matchLabels:
      app: todo-worker
  template:
    metadata:
      labels:
        app: todo-worker
    spec:
      containers:
      - name: todo-worker
        image: shivamthakur3/todoapp:latest  # Same Docker image, but running as worker
        command: ["./workerapp"]  # This will run the worker instead of the app
