yaml_files/todo-yaml/faktory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-faktory
spec:
  type: ClusterIP  # Exposes the service only within the cluster
  selector:
    app: todo-faktory
  ports:
    - port: 7419  # Faktory listens on this port
      targetPort: 7419
