yaml_files/todo-yaml/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
spec:
  type: ClusterIP  # Exposes the service only within the cluster
  selector:
    app: todo-postgres
  ports:
    - port: 5432  # Postgres listens on this port
      targetPort: 5432
