yaml_files/todo-yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-redis
spec:
  type: ClusterIP  # Exposes the service only within the cluster
  selector:
    app: todo-redis
  ports:
    - port: 6379  # Redis listens on this port
      targetPort: 6379
