yaml_files/todo-yaml/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app
spec:
  type: ClusterIP  # Exposes the service internally
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80  # This is the port the service exposes inside the cluster
      targetPort: 8080  # This is the port your app is running on
